[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepPhysX"
description = "A Python framework interfacing AI with numerical simulation."
authors = [{name = "Robin ENJALBERT"}]
requires-python = ">=3.10"
dependencies = ["numpy >= 1.24", "vedo >= 2024.5.1", "pyDataverse", "torch", "tensorboard"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "DeepPhysX.__version__"}
